--- a/lumi-app/composer.json
+++ b/lumi-app/composer.json
@@ -9,11 +9,13 @@
         "php": "^8.2",
         "cloudinary-labs/cloudinary-laravel": "^3.0",
         "inertiajs/inertia-laravel": "^2.0",
+        "kreait/laravel-firebase": "^6.2",
         "laravel/framework": "^12.0",
         "laravel/reverb": "^1.0",
         "laravel/socialite": "^5.24",
         "laravel/tinker": "^2.10.1",
         "nativephp/mobile": "^3.0",
+        "predis/predis": "^3.4",
         "pusher/pusher-php-server": "^7.2",
         "tightenco/ziggy": "^2.6"
     },
