--- a/lumi-app/package.json
+++ b/lumi-app/package.json
@@ -20,6 +20,7 @@
         "@vitejs/plugin-react": "^5.1.4",
         "autoprefixer": "^10.4.24",
         "clsx": "^2.1.1",
+        "firebase": "^12.9.0",
         "framer-motion": "^12.34.0",
         "laravel-echo": "^2.3.0",
         "lucide-react": "^0.564.0",
