--- a/lumi-app/package.json
+++ b/lumi-app/package.json
@@ -28,6 +28,7 @@
         "pusher-js": "^8.4.0",
         "react": "^19.2.4",
         "react-dom": "^19.2.4",
+        "recordrtc": "^5.6.2",
         "tailwind-merge": "^3.4.0"
     }
 }
